<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/main_activity_title"
        android:textSize="34sp"
        android:layout_marginVertical="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/button_lewandowski"
        android:text="@string/button_lewandowski"
        android:backgroundTint="@color/blue" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_pedri"
        android:text="@string/button_pedri"
        android:backgroundTint="@color/red" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/button_gavi"
        android:text="@string/button_gavi"
        android:onClick="runGavi"
        android:backgroundTint="@color/blue" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_araujo"
        android:text="@string/button_araujo"
        android:backgroundTint="@color/red" />
</LinearLayout>