<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:id="@+id/activity_lewandowski"
    tools:context=".ActivityLewandowski">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/activity_lewandowski_title"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/img_lewadowski"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/activity_lewandowski_img_desc"
        app:srcCompat="@drawable/lewandowski" />

    <Switch
        android:id="@+id/switch_lewandowski"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/txt_lewandowski"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/activity_lewandowski_desc"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded"
        android:layout_margin="10sp" />

</LinearLayout>